<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.smsmonitor.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_keywords"
        android:name="com.example.smsmonitor.ui.keywords.KeywordsFragment"
        android:label="@string/title_keywords" />

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.example.smsmonitor.ui.records.RecordsFragment"
        android:label="@string/title_records" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.smsmonitor.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>
